--- a/guestbook/application.yaml
+++ b/guestbook/application.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: guestbook
-  namespace: guestbook
+  namespace: argocd 
   labels:
     name: guestbook  
 spec:
