--- a/guestbook/ingress.yaml
+++ b/guestbook/ingress.yaml
@@ -9,10 +9,10 @@ spec:
   rules:
   - http:
       paths:
-      - path: /testpath
+      - path: /
         pathType: Prefix
         backend:
           service:
-            name: test
+            name: guestbook-ui
             port:
-              number: 8080
+              number: 80
